samples/_failures_safe/1761362247_974912_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35afcf20.c:159: error: expected ‘;’, ‘,’ or ‘)’ at end of input
